# RecruitmentMultiNavHostJniTask

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hr/test/: TabChangeListener.kt
app/src/main/java/com/hr/test/application/: App.kt
app/src/main/java/com/hr/test/main/: MainActivity.kt  MainMovieFragment.kt  MoviesAdapter.kt
app/src/main/java/com/hr/test/utils/: ViewGroupExtensions.kt
app/src/main/java/com/hr/test/view/: CircularProgressDrawable.kt
app/src/main/res/drawable/: ic_like_icon.xml  ic_not_liked_icon.xml
app/src/main/res/layout/: activity_main.xml  activity_main_layout.xml  detail_movie_actor_item_view.xml  detail_movie_fragment.xml  main_content_view.xml  main_error_view.xml  main_grid_fragment.xml  main_list_fragment.xml  main_loading_view.xml  movie_grid_item_view.xml  movie_item_view.xml  movie_list_item_view.xml
app/src/main/res/menu/: navigation_menu.xml
app/src/main/res/navigation/: navigation_graph_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  MovieGlue.cpp
core/src/main/cpp/movie/: Movie.hpp  MovieCallback.hpp  MovieController.hpp  MovieHolder.hpp
core/src/main/java/com/hr/core/repository/: LikedMoviesCache.kt  LikedMoviesRepository.kt  MoviesNativeRepository.java  MoviesRepository.kt  (+1 more)
core/src/test/java/com/hr/core/: TestSchedulersProvider.kt
models/src/main/java/com/hr/models/: Actor.kt  Movie.kt  MovieDetail.kt
(+21 files in other folders)
